--- a/public/assets/css/header-footer.css
+++ b/public/assets/css/header-footer.css
@@ -187,3 +187,56 @@ a.trash-btn {background: var(--red); border: 1px solid var(--red); width: 30px; 
 
 button.btn-gr {background: var(--green); border: 1px solid var(--green); padding: 6px 20px; display: inline-block; font-size: 12px; width: 100%; color: var(--white); border-radius: 5px; text-transform: uppercase; font-weight: bold; text-align: center; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
 button.btn-bl {background: var(--blue); border: 1px solid var(--blue); padding: 6px 20px; display: inline-block; font-size: 12px; width: 100%; color: var(--white); border-radius: 5px; text-transform: uppercase; font-weight: bold; text-align: center; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
+
+.error.invalid-feedback{color: #d66a74; font-size: 11px; margin-top: 0;}
+
+#loader-4{
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgb(252 255 252 / 90%);
+   z-index: 9999;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+ 
+ #loader-4 .text{
+   color: var(--darkpink);
+   font-size: 20px;
+   margin-right: 14px;
+ }
+ 
+ #loader-4 span{
+   display: inline-block;
+   width: 10px;
+   height: 10px;
+   border-radius: 100%;
+   background-color: var(--darkpink);
+   margin: 0px 5px;
+   opacity: 0;
+ }
+ 
+ #loader-4 span:nth-child(1){
+   animation: opacitychange 1s ease-in-out infinite;
+ }
+ 
+ #loader-4 span:nth-child(2){
+   animation: opacitychange 1s ease-in-out 0.33s infinite;
+ }
+ 
+ #loader-4 span:nth-child(3){
+   animation: opacitychange 1s ease-in-out 0.66s infinite;
+ }
+ 
+ @keyframes opacitychange{
+   0%, 100%{
+     opacity: 0;
+   }
+ 
+   60%{
+     opacity: 1;
+   }
+ }
