--- a/public/assets/css/header-footer.css
+++ b/public/assets/css/header-footer.css
@@ -427,6 +427,76 @@ button.btn-bl {background: var(--blue); border: 1px solid var(--blue); padding: 
 
 .error.invalid-feedback{color: #d66a74; font-size: 11px; margin-top: 0;}
 
+.Plasma-modal-form h2 {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0 0 1rem 0;
+  padding: 0;
+  text-align: center;
+  color: #000;
+}
+.Plasma-modal-form p{
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0 0 1rem 0;
+  padding: 0;
+  text-align: center;
+  color: #000;
+}
+
+.Plasma-modal-form .form-group {
+  margin-bottom: 1rem;
+}
+
+.Plasma-modal-form .form-group select.form-control {
+  background: #fff;
+  border-radius: 5px;
+  font-size: 13px;
+  border: 1px solid #e7e9eb;
+  font-weight: 400;
+  height: auto;
+  padding: 10px 10px;
+  box-shadow: 0 5px 13px rgb(240 240 241 / 46%);
+  outline: 0;
+  width: 100%;
+  display: inline-block;
+  color: #455A64;
+  appearance: revert;
+}
+
+.Plasma-modal-form .form-group input.form-control {
+  background: #fff;
+  border-radius: 5px;
+  font-size: 13px;
+  border: 1px solid #e7e9eb;
+  font-weight: 400;
+  height: auto;
+  padding: 10px 10px;
+  box-shadow: 0 5px 13px rgb(240 240 241 / 46%);
+  outline: 0;
+  width: 100%;
+  display: inline-block;
+  color: #455A64;
+}
+
+.Plasma-modal-form .form-group textarea.form-control {
+  background: #fff;
+  border-radius: 5px;
+  font-size: 13px;
+  border: 1px solid #e7e9eb;
+  font-weight: 400;
+  height: auto;
+  padding: 10px 10px;
+  box-shadow: 0 5px 13px rgb(240 240 241 / 46%);
+  outline: 0;
+  width: 100%;
+  display: inline-block;
+  color: #455A64;
+}
+
+.Plasma-modal-form .form-group .form-control:focus {
+  border: 1px solid #4a95cf;
+}
 
 
 #loader-4{
