--- a/public/assets/css/header-footer.css
+++ b/public/assets/css/header-footer.css
@@ -423,7 +423,13 @@ button.btn-gr {background: var(--green); border: 1px solid var(--green); padding
 
 button.btn-bl {background: var(--blue); border: 1px solid var(--blue); padding: 6px 20px; display: inline-block; font-size: 12px; width: 100%; color: var(--white); border-radius: 5px; text-transform: uppercase; font-weight: bold; text-align: center; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
 
-
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
 
 .error.invalid-feedback{color: #d66a74; font-size: 11px; margin-top: 0;}
 
