--- a/public/assets/css/notification.css
+++ b/public/assets/css/notification.css
@@ -1,7 +1,7 @@
 .plas-filter-section {display: flex;align-items: center; justify-content: space-between; margin-bottom: 1rem; }
 .plas-filter-heading h2 {font-size:20px; font-weight: 600; margin: 0; padding: 0; color:var(--white); }
 .plas-search-filter input.form-control {background: transparent; color-scheme: dark; border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); }
-.plas-search-filter select.form-control {background: transparent; color-scheme: dark;border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); appearance: revert; }
+.plas-search-filter select.form-control {background: #380171; color-scheme: dark;border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); appearance: revert; }
 .plas-search-filter textarea.form-control {background: transparent; color-scheme: dark;border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); }
 .plas-search-filter .form-control::-ms-input-placeholder {color: var(--white);}
 .plas-search-filter .form-control::placeholder {color: var(--white);}
