--- a/public/assets/css/header-footer.css
+++ b/public/assets/css/header-footer.css
@@ -433,6 +433,31 @@ input[type=number]::-webkit-outer-spin-button {
 
 .error.invalid-feedback{color: #d66a74; font-size: 11px; margin-top: 0;}
 
+.cancel-btn {
+  text-align: center;
+  border: none;
+  padding: 8px 30px;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 500;
+  display: inline-block;
+  background: var(--red);
+  box-shadow: 0px 4px 18px rgb(74 149 207 / 11%);
+  border-radius: 5px;
+}
+.save-btn {
+  text-align: center;
+  border: none;
+  padding: 8px 30px;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 500;
+  display: inline-block;
+  background: var(--pink);
+  box-shadow: 0px 4px 18px rgb(74 149 207 / 11%);
+  border-radius: 5px;
+}
+
 .Plasma-modal-form h2 {
   font-size: 16px;
   font-weight: 600;
