--- a/public/assets/css/header-footer.css
+++ b/public/assets/css/header-footer.css
@@ -432,7 +432,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .error.invalid-feedback{color: #d66a74; font-size: 11px; margin-top: 0;}
-
+.dropzone{border: 1px solid #e7e9eb !important;}
+.dropzone .dz-default.dz-message span{color: #000;}
 .cancel-btn {
   text-align: center;
   border: none;
