--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -561,3 +561,5 @@ a.Accountapproval-btn {
     text-align: center;
     box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
 }
+
+.product-card-action-text a.Addbtn {background: var(--pink); border: 1px solid var(--pink); padding: 5px 12px; display: inline-block; font-size: 13px; color: var(--white); border-radius: 5px; font-weight: 600; text-align: center; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
