--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -391,3 +391,37 @@ a.editbtn {
     box-shadow: 0px 4px 18px rgb(74 149 207 / 11%);
     border-radius: 5px;
 }
+
+.blog-card-action-text {
+    padding: 10px 15px;
+    display: flex;
+    gap: 5px;
+}
+
+.blog-card-action-text a.deletebtn {
+    background: var(--red);
+    border: 1px solid var(--red);
+    padding: 5px 12px;
+    display: inline-block;
+    font-size: 13px;
+    color: var(--white);
+    border-radius: 5px;
+    font-weight: 600;
+    text-align: center;
+    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog-card-action-text a.Editbtn {
+    background: var(--blue);
+    border: 1px solid var(--blue);
+    padding: 5px 12px;
+    display: inline-block;
+    font-size: 13px;
+    color: var(--white);
+    border-radius: 5px;
+    font-weight: 600;
+    text-align: center;
+    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog-card-action-text a.Addbtn {background: var(--pink); border: 1px solid var(--pink); padding: 5px 12px; display: inline-block; font-size: 13px; color: var(--white); border-radius: 5px; font-weight: 600; text-align: center; box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); }
