--- a/public/assets/css/announcement.css
+++ b/public/assets/css/announcement.css
@@ -1,318 +1,66 @@
-.notification-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-.search-icon {
-    position: absolute;
-    right: 15px;
-    top: 25.5%;
-    transform: translateY(-50%);
-}
-.notification-content {
-    flex: 1;
-    padding-right: 10px; /* Spacing between content and actions */
-}
+.plas-filter-section {display: flex;align-items: center; justify-content: space-between; margin-bottom: 1rem; }
+.plas-filter-heading h2 {font-size:20px; font-weight: 600; margin: 0; padding: 0; color:var(--white); }
+.plas-search-filter input.form-control {background: transparent; color-scheme: dark; border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); }
+.plas-search-filter select.form-control {background: #380171; color-scheme: dark;border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); appearance: revert; }
+.plas-search-filter textarea.form-control {background: transparent; color-scheme: dark;border-radius: 5px; font-size: 14px; border: 1px solid rgb(255 255 255 / 15%); font-weight: 400; height: auto; padding: 12px 15px; box-shadow: none; outline: 0; width: 100%; display: inline-block; color: var(--white); }
+.plas-search-filter .form-control::-ms-input-placeholder {color: var(--white);}
+.plas-search-filter .form-control::placeholder {color: var(--white);}
 
-.notification-tags {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
+.plas-search-filter .form-control:focus {border: 1px solid var(--yellow); }
+.search-form-group {position: relative; } 
+.search-form-group input.form-control {padding-right: 2rem; } 
+.search-form-group span.search-icon {position: absolute; right: 10px; top: 7px; }
+a.Accountapproval-btn {border-radius: 5px; background: var(--pink); box-shadow: 0px 4px 12px 0px rgba(182, 0, 248, 0.06); padding: 15px 20px; color: var(--white); text-align: center; font-size: 13px; font-style: normal; font-weight: 500; line-height: normal; width: 100%; display: inline-block; position: relative; outline: none; }
 
-.notification-date {
-    font-size: 0.9rem;
-    color: #888;
-}
+.manage-notification-item {background:var(--darkpink);display: flex;align-items: center;box-shadow: 0px 8px 13px rgb(0 0 0 / 5%);position: relative;margin-bottom: 1rem;padding: 10px;border-radius: 5px;}
+.manage-notification-content {flex: 1; }
+.notification-descr{margin-bottom: 10px;}
+.notification-descr p {font-size: 14px; font-weight: normal; margin: 0; padding: 0; color: var(--white); line-height: normal; }
 
-.notification-actions {
-    display: flex;
-    align-items: center;
-}
+.notification-tags {display: inline-block; border-radius: 5px; padding: 5px 15px; line-height: normal; font-size: 14px; color: var(--white); background: var(--pink); margin-bottom: 5px; }
 
-.delete-form {
-    margin-right: 10px; /* Spacing between delete and edit icons */
-}
+.notification-date {font-size: 13px;margin: 0;color: var(--white);line-height: 24px;font-weight: normal;}
 
-.delete-btn,
-.edit-link {
-    width: 20px;
-    height: 12px;
-    display: inline-block;
-    position: relative;
-}
+.manage-notification-icon {width: 64px; height: 64px; background: rgb(179 87 195 / 12%); text-align: center; line-height: 64px; border-radius: 50px; margin-right: 20px; }
+.manage-notification-icon img {width: 32px; height: 32px; }
+.manage-notification-action a {width: 48px; height: 48px; background: #f6f7f8; color: #525454; display: inline-block; text-align: center; border-radius: 64px; font-size: 20px; border: none; line-height: 42px; }
 
-.delete-btn img,
-.edit-link img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Ensure the icon fits within the box */
-}
-.manage-notification-item {
-    background: #FFFFFF;
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 8px 13px rgb(0 0 0 / 5%);
-    position: relative;
-    margin-bottom: 1rem;
-    border: 1px solid var(--Lighter);
+
+
+
+.cancel-btn{text-align: center;border: none; padding: 8px 30px; color: #fff; font-size: 13px; font-weight: 500; display: inline-block; background:var(--red); box-shadow: 0px 4px 18px rgb(74 149 207 / 11%); border-radius: 5px; }
+.save-btn{text-align: center;border: none; padding: 8px 30px; color: #fff; font-size: 13px; font-weight: 500; display: inline-block; background:var(--pink); box-shadow: 0px 4px 18px rgb(74 149 207 / 11%); border-radius: 5px; }
+
+
+.Plasma-modal-form h2 {font-size: 16px; font-weight: 600; margin: 0 0 1rem 0; padding: 0; text-align: center; }
+.Plasma-modal-form .form-group{margin-bottom: 1rem;}
+.Plasma-modal-form .form-group select.form-control {background: #fff; border-radius: 5px; font-size: 13px; border: 1px solid #e7e9eb; font-weight: 400; height: auto; padding: 10px 10px; box-shadow: 0 5px 13px rgb(240 240 241 / 46%); outline: 0; width: 100%; display: inline-block; color: #455A64; appearance: revert; }
+.Plasma-modal-form .form-group input.form-control {background: #fff; border-radius: 5px; font-size: 13px; border: 1px solid #e7e9eb; font-weight: 400; height: auto; padding: 10px 10px; box-shadow: 0 5px 13px rgb(240 240 241 / 46%); outline: 0; width: 100%; display: inline-block; color: #455A64; }
+.Plasma-modal-form .form-group textarea.form-control {background: #fff; border-radius: 5px; font-size: 13px; border: 1px solid #e7e9eb; font-weight: 400; height: auto; padding: 10px 10px; box-shadow: 0 5px 13px rgb(240 240 241 / 46%); outline: 0; width: 100%; display: inline-block; color: #455A64; }
+.Plasma-modal-form .form-group .form-control:focus {border: 1px solid #4a95cf; } 
+
+.btn-gr {
+    border: none;
     padding: 10px;
     border-radius: 5px;
-}
-
-.manage-notification-content {
-    flex: 1;
-}
-
-.notification-descr {
-    margin-bottom: 10px;
-}
-
-.notification-descr p {
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-    padding: 0;
-    color: #455A64;
-    line-height: normal;
-}
-
-.notification-tags {
-    display: inline-block;
-    border-radius: 50px;
-    padding: 5px 15px;
-    line-height: normal;
-    font-size: 14px;
-    color: #455A64;
-    background: var(--Lighter1);
-    margin-bottom: 5px;
-}
-
-.notification-date {
-    font-size: 13px;
-    margin: 0;
-    color: var(--Lighter);
-    line-height: 24px;
-    font-weight: normal;
-}
-
-.manage-notification-icon {
-    width: 64px;
-    height: 64px;
-    background: var(--Lighter1);
-    text-align: center;
-    line-height: 64px;
-    border-radius: 50px;
-    margin-right: 20px;
-}
-
-.manage-notification-icon img {
-    width: 32px;
-    height: 32px;
-}
-
-.manage-notification-action a {
-    width: 48px;
-    height: 48px;
-    background: #f6f7f8;
-    color: #525454;
-    display: inline-block;
-    text-align: center;
-    border-radius: 64px;
-    font-size: 20px;
-    border: none;
-    line-height: 42px;
-}
-
-
-
-.notification-modal-form h2 {
-    font-size: 16px;
-    font-weight: 600;
-    margin: 0 0 1rem 0;
-    padding: 0;
-}
-
-.notification-modal-form .form-group {
-    margin-bottom: 10px;
-}
-
-.notification-modal-form .search-form-group {
-    position: relative;
-}
-
-.notification-modal-form .form-group input.form-control {
-    position: relative;
-    color: var(--gray);
-    border-radius: 5px;
-    font-weight: 400;
-    font-size: 12px;
-    box-sizing: border-box;
-    padding: 10px 15px 10px 15px;
-    border: 1px solid var(--border);
-    width: 100%;
-    background: #FFF;
-    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
-}
-
-.notification-modal-form .form-group select.form-control {
-    position: relative;
-    appearance: auto;
-    color: var(--gray);
-    border-radius: 5px;
-    font-weight: 400;
-    font-size: 12px;
-    box-sizing: border-box;
-    padding: 12px 15px 12px 15px;
-    border: 1px solid var(--border);
-    width: 100%;
-    background: #FFF;
-    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
-}
-
-.notification-modal-form .form-group textarea.form-control {
-    position: relative;
-    color: var(--gray);
-    border-radius: 5px;
-    font-weight: 400;
-    font-size: 12px;
-    box-sizing: border-box;
-    padding: 10px 15px 10px 15px;
-    border: 1px solid var(--border);
-    width: 100%;
-    background: #FFF;
-    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05);
-}
-
-.notification-modal-form .search-form-group input.form-control {
-    padding: 10px 15px 10px 40px;
-}
-
-.notification-modal-form .search-form-group span.search-icon {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    pointer-events: none;
-    transform: translateY(-50%) scaleX(-1);
-    color: #6362e7;
-    font-size: 18px;
-}
-
-.cancel-btn {
-    text-align: center;
-    border: none;
-    padding: 8px 30px;
-    color: #fff;
-    font-size: 13px;
-    font-weight: 500;
-    display: inline-block;
-    background: var(--blue);
-    box-shadow: 0px 4px 18px rgb(74 149 207 / 11%);
-    border-radius: 5px;
-}
-
-.save-btn {
-    text-align: center;
-    border: none;
-    padding: 8px 30px;
-    color: #fff;
-    font-size: 13px;
-    font-weight: 500;
-    display: inline-block;
-    background: var(--green);
-    box-shadow: 0px 4px 18px rgb(74 149 207 / 11%);
-    border-radius: 5px;
-}
-
-.manage-announcement-action {
-    display: flex;
-    gap: 5px;
-}
-
-.manage-announcement-action a.editbtn {
-    width: 48px;
-    height: 48px;
-    background: #f3f7e6;
-    color: #525454;
-    display: inline-block;
-    text-align: center;
-    border-radius: 64px;
-    font-size: 20px;
-    border: none;
-    line-height: 42px;
-}
-
-
-.manage-announcement-action .deletebtm {
-    width: 48px;
-    height: 48px;
-    background: #fdf1f0;
-    color: #525454;
-    display: inline-block;
-    text-align: center;
-    border-radius: 64px;
-    font-size: 20px;
-    border: none;
-    line-height: 42px;
-}
-/* Modal */
-.modal-content {
-    border-radius: 8px;
-    color: black;
-}
-.btn-bl {
-    background: var(--blue); /* Custom blue color */
-    border: 1px solid var(--blue);
-    padding: 9px 15px;
-    display: inline-block;
-    font-size: 13px;
-    width: 100%; /* Full width of its container */
-    color: var(--white); /* Custom white color */
-    border-radius: 5px;
-    font-weight: bold;
-    text-align: center;
-    box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.05); /* Custom box shadow */
-}
-.txtcolor{
-color: #0b0e0e;
-}
-
-.search-form-group {
-    position: relative;
-}
-.search-icon {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.btn-bl {
-    background-color: #007bff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    width: 100%;
-    color: #fff;
-    border-radius: 5px;
-    font-weight: bold;
-    text-align: center;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 .btn-gr {
-    background-color: #f8f9fa;
+    background-color: var(--pink);
+    width: 60px; /* Adjust the width as needed */
+    height: 43px; /* Adjust the height as needed */
     border: none;
-    padding: 10px;
     border-radius: 5px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    height: auto;
+    padding: 3px 5px;
+    margin-left: 10%;
 }
+
 .btn-gr img {
-    width: 20px;
-    height: 20px;
-}
-
-.btn-gr {
-    background-color: white;
     width: 30px;
+    height: 39px;
 }
